k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: email-validator
  labels:
    app: email-validator
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: email-validator
